  * knows about CODE, REGEXP, LVALUE and Scalar refs and prints them correctly
  * stop at cyclic references (e.g. don't loop forever)
  * disable Devel::Size warnings (about incomplete CV etc, thanx nadim!)
  * drop the "Key " from the output, it is rendundand (thanx nadim!)
  * report_size: bytes => '' in $options works correctly now (thanx nadim!)
2004-01-10 v0.04 Tels 55 tests
  * fixed the bug that sometimes looking at a scalar again after looking at
    a longer scalar reported the wrong (bigger) size. $pre = shift vs. $_[0]
    usage in total_size() was the culprit (slot reusing).  Thanx Sadahiro!
  * Size report outputs version of Devel::Size::Report, too
  * refactored tests into three files, added some more tests
  * use Scalar::Util to get reftype and refaddr
  * added option 'addr' to report_size() to print elem address
  * example/psize takes options as second string argument
2004-01-13 v0.05 Tels 76 tests
  * references to ARRAY, HASH are handled properly
  * references to SCALARs are now reported likewise than ARRAY/HASH refs
  * fixed indendation bug with hash keys pointing to SCALARs
  * more tests, especially for the addr => 1 feature
  * psize takes options as single-letter abbrev., too
  * added option "class" to optionally show classnames
2004-10-18 v0.06 Tels 76 tests
  * fixed example/size.pl - duh!
  * some small cleanups in comments in Report.pm
  * amended TODO
  * scalar references (\0) are now reported with their correct size
2004-10-23 v0.07 Tels 100 tests
  * rename S_KEY and S_REF to SF_KEY and SF_REF
  * document exportable methods
  * small comments added
  * The "Total" line now includes the number of elements
  * added options 'terse' (supresss gory details) and 'summary' (include
    per-class overview at end of report) to report_size()
  * added S_VSTRING
  * added SF_WEAK, SF_RO, SF_DUAL
  * simplify test code by using like()
  * added 'te' and 's' option to psize
  * added more examples to example/size.pl