@@ -8,6 +8,8 @@ WriteMakefile(
 		Devel::Size => 0.58,
 		Test::Simple => 0.47,
 		Scalar::Util => 1.13,
+		Time::HiRes => 1.52,
+		Array::RefElem => 1.00,
 	}, # e.g., Module::Name => 1.1
     'LIBS'		=> [''], # e.g., '-lm'
     'DEFINE'		=> '', # e.g., '-DHAVE_SOMETHING'
